Bug fixes styling (#10)
* toast align update - overlow fix

* scrollbar color update + webkit styles removal

* replacing incompatible children html elements

--- a/public/css/globals.css
+++ b/public/css/globals.css
@@ -57,23 +57,8 @@
 
   --button-border-radius: 8px;
   --border-style-secondary: 11px solid var(--background-tertiary);
-}
-
-/* WebKit browsers */
-::-webkit-scrollbar {
-  width: 23px;
-}
-
-::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 20px 20px transparent;
-  border: solid 10px transparent;
-  border-radius: 20px;
-}
-
-::-webkit-scrollbar-thumb {
-  box-shadow: inset 0 0 20px 20px #D2D4D8;
-  border: solid 10px transparent;
-  border-radius: 20px;
+  scrollbar-width: thin;
+  scrollbar-color: var(--mc-grey-3) transparent;
 }
 
 * {
